--- a/package.json
+++ b/package.json
@@ -32,25 +32,29 @@
     "test:coverage"
   ],
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "~10.0.0",
     "express": "~4.17.1",
+    "ioredis": "^5.2.2",
     "joi": "~17.4.0",
     "jsonwebtoken": "~8.5.1",
     "lodash": "~4.17.21",
+    "mysql2": "^2.3.3",
     "opossum": "~6.0.1",
     "sequelize": "6.21.3",
     "sequelize-auto": "0.8.8",
     "sequelize-cli": "6.4.1",
+    "swagger-ui-express": "^4.5.0",
     "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/express": "~4.17.11",
     "@types/hapi__joi": "~17.1.6",
+    "@types/jsonwebtoken": "8.5.1",
     "@types/lodash": "~4.14.170",
     "@types/opossum": "~4.1.1",
-    "@types/sinon": "~10.0.0",
     "@types/sequelize": "4.28.9",
-    "@types/jsonwebtoken": "8.5.1",
+    "@types/sinon": "~10.0.0",
     "@types/swagger-ui-express": "~4.1.2",
     "chai": "~4.3.4",
     "eslint": "~7.27.0",
