--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3.1'
+version: '3.3'
 services:
   db:
     build:
       context: .local/mysql
     restart: always
     environment:
-      MYSQL_DATABASE: 'root'
+      MYSQL_DATABASE: 'courses'
       MYSQL_PASSWORD: 'root'
       MYSQL_ROOT_PASSWORD: 'root'
     ports:
