--- a/.env.sample
+++ b/.env.sample
@@ -13,15 +13,15 @@ ERROR_THRESHOLD_PERCENTAGE=50
 SECRET_KEY_TOKEN="local"
 EXPIRE_REFRESH_TOKEN="7d"
 # in minutes
-EXPIRE_ACCESS_TOKEN=6000000
+EXPIRE_ACCESS_TOKEN=60
 
 # Redis
-REDIS_PREFIX="dev-acc-token-"
+REDIS_PREFIX="xxxx"
 REDIS_HOST="localhost"
 REDIS_PORT="6379"
 REDIS_CLUSTER_MODE=false
 # DB
-DB_VOLUME="/Users/yuliiakovalenko/PhpstormProjects/mysql_folder"
+DB_VOLUME="xxx"
 DB_NAME=cources
 DB_HOST=localhost
 DB_USER=root
