--- a/package.json
+++ b/package.json
@@ -32,14 +32,17 @@
     "test:coverage"
   ],
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "~10.0.0",
     "express": "~4.17.1",
+    "generate-password": "^1.7.0",
     "ioredis": "^5.2.2",
     "joi": "~17.4.0",
     "jsonwebtoken": "~8.5.1",
     "lodash": "~4.17.21",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.8",
     "opossum": "~6.0.1",
     "sequelize": "6.21.3",
     "sequelize-auto": "0.8.8",
