started adding user logic

--- a/.env.sample
+++ b/.env.sample
@@ -14,7 +14,11 @@ SECRET_KEY_TOKEN="local"
 EXPIRE_REFRESH_TOKEN="7d"
 # in minutes
 EXPIRE_ACCESS_TOKEN=60
-
+#mailer
+PROJECT_SENDER_EMAIL="xxx"
+PROJECT_MAIL_PASSWORD="xxx"
+#hash
+PASSWORD_HASH_ROUNDS=x
 # Redis
 REDIS_PREFIX="xxxx"
 REDIS_HOST="localhost"
