--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "sequelize-auto": "0.8.8",
     "sequelize-cli": "6.4.1",
     "swagger-ui-express": "^4.5.0",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "@aws-sdk/client-s3": "3.18.0",
+    "multer": "1.4.2"
   },
   "devDependencies": {
     "@types/express": "~4.17.11",
