move changes from bb

--- a/.env.sample
+++ b/.env.sample
@@ -20,7 +20,7 @@ PROJECT_MAIL_PASSWORD="xxx"
 #hash
 PASSWORD_HASH_ROUNDS=x
 # Redis
-REDIS_PREFIX="xxxx"
+REDIS_PREFIX="dev-acc-token-"
 REDIS_HOST="localhost"
 REDIS_PORT="6379"
 REDIS_CLUSTER_MODE=false
