--- a/.do/app-spec.yaml
+++ b/.do/app-spec.yaml
@@ -25,7 +25,7 @@ services:
   github:
     branch: main
     deploy_on_push: true
-    repo: yuliia1024/courses-service.
+    repo: yuliia1024/courses-service
   http_port: 3000
   instance_count: 1
   instance_size_slug: basic-xxs
