--- a/.do/app-spec.yaml
+++ b/.do/app-spec.yaml
@@ -4,15 +4,15 @@ databases:
   num_nodes: 1
   size: db-s-dev-database
   db_name: courses-db
-  name: courses
-  version: "8.0"
+  name: courses-db
+  version: "8"
 - cluster_name: courses-redis
   engine: REDIS
   name: courses-redis
   production: true
   version: "7"
 name: courses
-region: fra
+region: nyc1
 services:
 - dockerfile_path: Dockerfile
   envs:
