--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/yuliia1024/courses-service#readme",
   "scripts": {
-    "start": "node index.js",
+    "start": "npx sequelize-cli db:seed:all && node index.js",
     "dev": "nodemon",
     "test": "mocha",
     "test:coverage": "nyc mocha",
