--- a/.env.sample
+++ b/.env.sample
@@ -20,18 +20,24 @@ PROJECT_MAIL_PASSWORD="xxx"
 #hash
 PASSWORD_HASH_ROUNDS=x
 # Redis
+REDIS_URL="xxx"
 REDIS_PREFIX="dev-acc-token-"
 REDIS_HOST="localhost"
-REDIS_PORT="6379"
+REDIS_PORT=6379
 REDIS_CLUSTER_MODE=false
+REDIS_VOLUME="/Users/yuliiakovalenko/PhpstormProjects/redis_folder"
 # DB
-DB_VOLUME="xxx"
-DB_NAME=cources
+DB_VOLUME="/Users/yuliiakovalenko/PhpstormProjects/mysql_folder"
+DB_NAME="courses"
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=root
+DB_USER="root"
+DB_PASSWORD="root"
 DB_MAX_CONNECTION=300
-DB_PORT=3306,
-# AWS S3
-REGION="***"
-BUCKET_NAME="***"
+DB_PORT=3306
+SSL_CA="../ca-certificate.crt"
+# DO S3
+REGION="xxx"
+ENDPOINT="xxx"
+BUCKET_NAME="homework"
+ACCESS_KEY_ID="xxx"
+SECRET_ACCESS_KEY="xxx"
