--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "start": "node index.js",
     "seed": "npx sequelize-cli db:seed:all",
     "dev": "nodemon",
-    "test": "mocha",
-    "test:coverage": "nyc mocha",
+    "test:unit": "npx mocha test/unit.test.js",
+    "test:e2e": "npx mocha test/e2e-tests/routes.test.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -63,6 +63,7 @@
     "@types/sinon": "~10.0.0",
     "@types/swagger-ui-express": "~4.1.2",
     "chai": "~4.3.4",
+    "chai-http": "^4.3.0",
     "eslint": "~7.27.0",
     "eslint-config-airbnb-base": "~14.2.1",
     "eslint-config-prettier": "~8.3.0",
@@ -72,7 +73,6 @@
     "mocha": "~8.4.0",
     "node-mocks-http": "~1.10.1",
     "nodemon": "~2.0.7",
-    "nyc": "~15.1.0",
     "pre-commit": "~1.2.2",
     "sinon": "~10.0.0"
   }
