--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,9 +46,9 @@ jobs:
           - 6379:6379
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        with:
-          node-version: ${{ matrix.node-version }}
+#      - name: Use Node.js ${{ matrix.node-version }}
+#        with:
+#          node-version: ${{ matrix.node-version }}
       - name: Install Dependencies
         run: npm ci
       - name: Run Unit Tests
