--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test:coverage"
   ],
   "dependencies": {
+    "@aws-sdk/client-s3": "3.18.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "~10.0.0",
@@ -42,6 +43,7 @@
     "joi": "~17.4.0",
     "jsonwebtoken": "~8.5.1",
     "lodash": "~4.17.21",
+    "multer": "1.4.2",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.8",
     "opossum": "~6.0.1",
@@ -49,9 +51,7 @@
     "sequelize-auto": "0.8.8",
     "sequelize-cli": "6.4.1",
     "swagger-ui-express": "^4.5.0",
-    "uuid": "8.3.2",
-    "@aws-sdk/client-s3": "3.18.0",
-    "multer": "1.4.2"
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/express": "~4.17.11",
