--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -68,7 +68,7 @@ jobs:
           PROJECT_SENDER_EMAIL: ${{ secrets.PROJECT_SENDER_EMAIL }}
           PROJECT_MAIL_PASSWORD:  ${{ secrets.PROJECT_MAIL_PASSWORD }}
           PASSWORD_HASH_ROUNDS: 10
-          REDIS_PREFIX: dev-acc-token-
+          REDIS_PREFIX: 'dev-acc-token-'
           REDIS_CLUSTER_MODE: false
           DB_NAME: courses-test
           DB_HOST: 127.0.0.1
@@ -101,4 +101,5 @@ jobs:
           DB_USER: user
           DB_PASSWORD: password
           DB_MAX_CONNECTION: 300
+          SSL_CA: '../ca-certificate.crt'
           DB_PORT: 3306
