--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -96,7 +96,7 @@ jobs:
           PASSWORD_HASH_ROUNDS: 10
           REDIS_PREFIX: 'dev-acc-token-'
           REDIS_CLUSTER_MODE: false
-          DB_NAME: courses-test
+          DB_NAME: 'courses-test'
           DB_HOST: 127.0.0.1
           DB_USER: user
           DB_PASSWORD: password
