--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,7 +78,7 @@ jobs:
         run: npm run test:e2e
         env:
           NODE_ENV: e2e-test
-          REDIS_HOST: 0.0.0.0
+          REDIS_HOST: redis
           REDIS_PORT: 6379
           PORT: 3000
           PREFIX_PATH: courses
@@ -94,7 +94,7 @@ jobs:
           REDIS_PREFIX: 'dev-acc-token-'
           REDIS_CLUSTER_MODE: false
           DB_NAME: courses-test
-          DB_HOST: 0.0.0.0
+          DB_HOST: mysql
           DB_USER: user
           DB_PASSWORD: password
           DB_MAX_CONNECTION: 300
