--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,8 +78,6 @@ jobs:
         run: npm run test:e2e
         env:
           NODE_ENV: e2e-test
-          REDIS_HOST: redis
-          REDIS_PORT: 6379
           PORT: 3000
           PREFIX_PATH: courses
           REQUEST_LIMIT_TIME: 1
@@ -91,6 +89,8 @@ jobs:
           PROJECT_SENDER_EMAIL: ${{ secrets.PROJECT_SENDER_EMAIL }}
           PROJECT_MAIL_PASSWORD:  ${{ secrets.PROJECT_MAIL_PASSWORD }}
           PASSWORD_HASH_ROUNDS: 10
+          REDIS_HOST: redis
+#          REDIS_PORT: 6379
           REDIS_PREFIX: 'dev-acc-token-'
           REDIS_CLUSTER_MODE: false
           DB_NAME: courses-test
@@ -99,7 +99,7 @@ jobs:
           DB_PASSWORD: password
           DB_MAX_CONNECTION: 300
           SSL_CA: '../ca-certificate.crt'
-          DB_PORT: 3306
+#          DB_PORT: 3306
           REGION: nyc3
           ENDPOINT: https://nyc3.digitaloceanspaces.com
           BUCKET_NAME: 'homework'
