--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
         run: npm run test:unit
         env:
           NODE_ENV: unit-test
-          REDIS_HOST: 0.0.0.0
+          REDIS_HOST: redis
           REDIS_PORT: 6379
           PORT: 3000
           PREFIX_PATH: courses
@@ -68,7 +68,7 @@ jobs:
           REDIS_PREFIX: 'dev-acc-token-'
           REDIS_CLUSTER_MODE: false
           DB_NAME: courses-test
-          DB_HOST: 0.0.0.0
+          DB_HOST: musql
           DB_USER: user
           DB_PASSWORD: password
           DB_MAX_CONNECTION: 300
@@ -90,7 +90,7 @@ jobs:
           PROJECT_MAIL_PASSWORD:  ${{ secrets.PROJECT_MAIL_PASSWORD }}
           PASSWORD_HASH_ROUNDS: 10
           REDIS_HOST: redis
-#          REDIS_PORT: 6379
+          REDIS_PORT: 6379
           REDIS_PREFIX: 'dev-acc-token-'
           REDIS_CLUSTER_MODE: false
           DB_NAME: courses-test
@@ -99,7 +99,7 @@ jobs:
           DB_PASSWORD: password
           DB_MAX_CONNECTION: 300
           SSL_CA: '../ca-certificate.crt'
-#          DB_PORT: 3306
+          DB_PORT: 3306
           REGION: nyc3
           ENDPOINT: https://nyc3.digitaloceanspaces.com
           BUCKET_NAME: 'homework'
