--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -68,7 +68,7 @@ jobs:
           REDIS_PREFIX: 'dev-acc-token-'
           REDIS_CLUSTER_MODE: false
           DB_NAME: courses-test
-          DB_HOST: musql
+          DB_HOST: mysql
           DB_USER: user
           DB_PASSWORD: password
           DB_MAX_CONNECTION: 300
