--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
         run: npm run test:unit
         env:
           NODE_ENV: unit-test
-          REDIS_HOST: redis
+          REDIS_HOST: localhost
           REDIS_PORT: 6379
           PORT: 3000
           PREFIX_PATH: courses
@@ -66,7 +66,7 @@ jobs:
           REDIS_PREFIX: 'dev-acc-token-'
           REDIS_CLUSTER_MODE: false
           DB_NAME: courses-test
-          DB_HOST: mysql
+          DB_HOST: localhost
           DB_USER: user
           DB_PASSWORD: password
           DB_MAX_CONNECTION: 300
