testing gitActions for e2e tests connection to db

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -73,7 +73,7 @@ jobs:
           SSL_CA: '../ca-certificate.crt'
           DB_PORT: 3306
       - name: Run E2E Tests
-        run: npm run test:e2e
+#        run: npm run test:e2e
         env:
           NODE_ENV: e2e-test
           PORT: 3000
@@ -103,3 +103,6 @@ jobs:
           BUCKET_NAME: 'homework'
           ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
           SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+        run: |
+          sudo /etc/init.d/mysql start
+          npm run test:e2e
