--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -87,12 +87,12 @@ jobs:
           PROJECT_SENDER_EMAIL: ${{ secrets.PROJECT_SENDER_EMAIL }}
           PROJECT_MAIL_PASSWORD:  ${{ secrets.PROJECT_MAIL_PASSWORD }}
           PASSWORD_HASH_ROUNDS: 10
-          REDIS_HOST: redis
+          REDIS_HOST: 127.0.0.1
           REDIS_PORT: 6379
           REDIS_PREFIX: 'dev-acc-token-'
           REDIS_CLUSTER_MODE: false
           DB_NAME: courses-test
-          DB_HOST: mysql
+          DB_HOST: 127.0.0.1
           DB_USER: root
           DB_PASSWORD: password
           DB_MAX_CONNECTION: 300
@@ -104,5 +104,4 @@ jobs:
           ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
           SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
         run: |
-          sudo /etc/init.d/mysql start
           npm run test:e2e
