--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,6 +43,10 @@ jobs:
         ports:
           - 6379:6379
     steps:
+      - name: Verify MySQL connection from host
+        run: |
+          sudo apt-get install -y mysql-client
+          mysql --host 127.0.0.1 --port 32574 -u root -p password -e "SHOW DATABASES"
       - uses: actions/checkout@v3
       - name: Install Dependencies
         run: npm ci
