testing gitActions for e2e tests connection to db: fixed env

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -86,7 +86,8 @@ jobs:
           RESET_TIMEOUT: 10
           ERROR_THRESHOLD_PERCENTAGE: 10
           SECRET_KEY_TOKEN: test
-          EXPIRE_ACCESS_TOKEN: 7d
+          EXPIRE_ACCESS_TOKEN: 60
+          EXPIRE_REFRESH_TOKEN: 7d
           PROJECT_SENDER_EMAIL: ${{ secrets.PROJECT_SENDER_EMAIL }}
           PROJECT_MAIL_PASSWORD:  ${{ secrets.PROJECT_MAIL_PASSWORD }}
           PASSWORD_HASH_ROUNDS: 10
