--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -112,6 +112,8 @@ jobs:
       - name: Set up doctl
         uses: digitalocean/action-doctl@v2
         with:
-          token: ${{ secrets.DIGITALOCEAN_API_TOKEN }}
+          id: ${{secrets.DIGITALOCEAN_APP_ID }}
+          token: ${{secrets.DIGITALOCEAN_API_TOKEN }}
       - name: Deploy to DigitalOcean
-        run: doctl apps update 2fc294e6-3d12-4e5a-9656-99903f0b67c2
+        run: |
+          doctl apps update --spec .do/spec.yaml
