--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -112,8 +112,8 @@ jobs:
       - name: Set up doctl
         uses: digitalocean/action-doctl@v2
         with:
-          id: ${{secrets.DIGITALOCEAN_APP_ID }}
           token: ${{secrets.DIGITALOCEAN_API_TOKEN }}
       - name: Deploy to DigitalOcean
         run: |
-          doctl apps update ${{secrets.DIGITALOCEAN_APP_ID }} --spec .do/spec.yaml
+          doctl apps spec get ${{secrets.DIGITALOCEAN_APP_ID }} > spec.yaml
+          doctl apps update ${{secrets.DIGITALOCEAN_APP_ID }} --spec spec.yaml
