added e2e tests, refactored readme file

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # Env
-NODE_ENV="development"
+NODE_ENV="development | production | unit-test | e2e-test"
 PORT=3000
 PREFIX_PATH="courses"
 # Request limit (time in minutes)
@@ -25,9 +25,9 @@ REDIS_PREFIX="dev-acc-token-"
 REDIS_HOST="localhost"
 REDIS_PORT=6379
 REDIS_CLUSTER_MODE=false
-REDIS_VOLUME="/Users/yuliiakovalenko/PhpstormProjects/redis_folder"
+REDIS_VOLUME="../../redis_folder"
 # DB
-DB_VOLUME="/Users/yuliiakovalenko/PhpstormProjects/mysql_folder"
+DB_VOLUME="../../mysql_folder"
 DB_NAME="courses"
 DB_HOST=localhost
 DB_USER="root"
