fixed deployment steps

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -110,9 +110,6 @@ jobs:
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{secrets.DIGITALOCEAN_API_TOKEN }}
-      - name: Get spec from DigitalOcean
-        run: |
-          doctl apps spec get ${{secrets.DIGITALOCEAN_APP_ID }} > spec.yaml
       - name: Deploy to DigitalOcean
         run: |
-          doctl apps update ${{secrets.DIGITALOCEAN_APP_ID }} --spec spec.yaml
+          doctl apps create-deployment ${{secrets.DIGITALOCEAN_APP_ID }}
