--- a/.env.sample
+++ b/.env.sample
@@ -27,6 +27,7 @@ REDIS_PORT=6379
 REDIS_CLUSTER_MODE=false
 REDIS_VOLUME="../../redis_folder"
 # DB
+TEST_DB_NAME="courses-test"
 DB_VOLUME="../../mysql_folder"
 DB_NAME="courses"
 DB_HOST=localhost
